graphic optimization, linkedin and git links added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </ul>
                     </nav>
                     <div class="header-top__social">
-                        <a href="#!">
+                        <a href="https://www.linkedin.com/in/natasha-balashova-98853376/">
                             <svg class="linkedin-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                 <g clip-path="url(#clip0_112_518)">
                                     <path d="M7.44897 10.2947H1.02492C0.739808 10.2947 0.508789 10.5258 0.508789 10.8108V31.4485C0.508789 31.7336 0.739808 31.9647 1.02492 31.9647H7.44897C7.73408 31.9647 7.9651 31.7336 7.9651 31.4485V10.8108C7.9651 10.5258 7.73408 10.2947 7.44897 10.2947Z"/>
