HTML .header__socials correction

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <h3 class="header__subtitle">На связи:</h3>
                             <div class="header__socials">
                                 <ul class="socials">
-                                    <li><a href="https://t.me/alkorstar">
+                                    <li><a href="tel:89258260741">
                                         <img src="./img/socials/telegram.svg" alt="telegram">
                                     </a></li>
                                     <li><a href="https://vk.com/natashabalashova">
@@ -143,7 +143,7 @@
                                     <li><a href="#!">
                                         <img src="./img/socials/instagram.svg" alt="instagram">
                                     </a></li>
-                                    <li><a href="#!">
+                                    <li><a href="tel:89258260741">
                                         <img src="./img/socials/whatsapp.svg" alt="whatsapp">
                                     </a></li>
                                 </ul>
