HTML svg code correction

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                         <a href="https://www.linkedin.com/in/natasha-balashova-98853376/">
                             <svg class="svg-ln">
                                 <use href="./img/socials/svgSprite.svg#svg-ln"></use>
-                            </svg></a>
+                            </svg>
+                        </a>
                         <a href="https://github.com/Nattyme">
                             <svg class="svg-git">
                                 <use href="./img/socials/svgSprite.svg#svg-git"></use>
@@ -116,19 +117,27 @@
                             <div class="header__socials">
                                 <ul class="socials">
                                     <li><a href="tel:89258260741">
-                                        <img src="./img/socials/telegram.svg" alt="telegram">
+                                        <svg class="svg-tg">
+                                            <use href="./img/socials/svgSprite.svg#svg-tg"></use>
+                                        </svg>
                                     </a></li>
                                     <li><a href="https://vk.com/natashabalashova">
-                                        <img src="./img/socials/vk.svg" alt="vkontakte">
+                                        <svg class="svg-vk">
+                                            <use href="./img/socials/svgSprite.svg#svg-vk"></use>
+                                        </svg>
                                     </a></li>
                                     <li><a href="#!">
-                                        <img src="./img/socials/facebook.svg" alt="facebook">
+                                        <svg class="svg-fb">
+                                            <use href="./img/socials/svgSprite.svg#svg-fb"></use>
+                                        </svg>
                                     </a></li>
                                     <li><a href="#!">
-                                        <img src="./img/socials/instagram.svg" alt="instagram">
+                                        <object type="image/svg+xml" data="./img/socials/instagram.svg"></object>
                                     </a></li>
                                     <li><a href="tel:89258260741">
-                                        <img src="./img/socials/whatsapp.svg" alt="whatsapp">
+                                        <svg class="svg-wa">
+                                            <use href="./img/socials/svgSprite.svg#svg-wa"></use>
+                                        </svg>
                                     </a></li>
                                 </ul>
                             </div>
