HTML/CSS header-about__skills li correction

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </div>
         
                             <div class="header-intro__buttons">
-                                <a href="#projects" class="button">Познакомиться</a>
+                                <a href="#about" class="button">Познакомиться</a>
                                 <a href="#contacts" class="button">Контакты</a>
                             </div>
                                 
@@ -101,7 +101,7 @@
             <!--// banner -->
 
             <!-- about -->
-            <div class="header-about">
+            <div class="header-about" id="about">
                 <div class="container">
                     <div class="header-about__content">
 
@@ -111,11 +111,11 @@
                                 <p class="subtitle-42px">Что я умею:</p>
                             </div>
                             <ul class="header-about__skills">
-                                <li>&#8212; pixel perfect, полное соответствие макету</li>
-                                <li>&#8212; верстаю с сеткой или без</li>
-                                <li>&#8212; адаптивная верстка под мобильные устройства</li>
-                                <li>&#8212; оптимизация по retina экраны</li>
-                                <li>&#8212; с Bootstrap и без него</li>
+                                <li>pixel perfect, полное соответствие макету</li>
+                                <li>верстаю с сеткой или без</li>
+                                <li>адаптивная верстка под мобильные устройства</li>
+                                <li>оптимизация по retina экраны</li>
+                                <li>с Bootstrap и без него</li>
                             </ul>
                         </div>
                         <!--// column -->
