--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
             </div>
             <!--// about -->
         </section>
+
+        <section class="portfolio">
+            <div class="container">
+                <div class="portfolio__content">
+                    <div class="portfolio__title">
+                        <h2 class="subtitle">Портфолио</h2>
+                    </div>
+                    <div class="portfolio__cards">
+                        CARDS
+                    </div>
+                </div>
+            </div>
+        </section>
         
 	</body>
 </html>
