HTML/CSS .portfolio-card base data, style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </header>
 
-        <section class="header">
+        <section class="header none">
 
             <!-- intro -->
             <div class="header-intro">
@@ -167,10 +167,21 @@
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
-                        <h2 class="subtitle">Портфолио</h2>
+                        <h2 class="subtitle grad-border">Портфолио</h2>
                     </div>
                     <div class="portfolio__cards">
-                        CARDS
+
+                        <!-- card -->
+                        <a href="#!" target="_blank" class="portfolio-card" >
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/img-01.jpg" alt="project preview">
+                            </div>
+                            <div class="portfolio-card__text">
+                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                            </div>
+                        </a>
+                        <!--// card -->
                     </div>
                 </div>
             </div>
