CSS .portfolio-card :hover style

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<meta name="msapplication-TileColor" content="#00aba9">
 		<meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+
 	</head>
 	<body>
         <header class="header-top">
@@ -175,6 +176,54 @@
                         <a href="#!" target="_blank" class="portfolio-card" >
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/img-01.jpg" alt="project preview">
+                            </div>
+                            <div class="portfolio-card__text">
+                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                            </div>
+                        </a>
+                        <!--// card -->
+
+                        <!-- card -->
+                        <a href="#!" target="_blank" class="portfolio-card" >
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/img-02.jpg" alt="project preview">
+                            </div>
+                            <div class="portfolio-card__text">
+                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                            </div>
+                        </a>
+                        <!--// card -->
+
+                        <!-- card -->
+                        <a href="#!" target="_blank" class="portfolio-card" >
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/img-03.jpg" alt="project preview">
+                            </div>
+                            <div class="portfolio-card__text">
+                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                            </div>
+                        </a>
+                        <!--// card -->
+
+                        <!-- card -->
+                        <a href="#!" target="_blank" class="portfolio-card" >
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/img-04.jpg" alt="project preview">
+                            </div>
+                            <div class="portfolio-card__text">
+                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                            </div>
+                        </a>
+                        <!--// card -->
+
+                        <!-- card -->
+                        <a href="#!" target="_blank" class="portfolio-card" >
+                            <div class="portfolio-card__img">
+                                <img src="./img/portfolio/img-05.jpg" alt="project preview">
                             </div>
                             <div class="portfolio-card__text">
                                 <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
