--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="portfolio__cards">
 
                         <!-- card -->
-                        <a href="#!" target="_blank" class="portfolio-card" >
+                        <a href="http://b92582vu.beget.tech/forest-travel/index.html" target="_blank" class="portfolio-card" >
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/img-01.jpg" alt="project preview">
                             </div>
@@ -185,48 +185,48 @@
                         <!--// card -->
 
                         <!-- card -->
-                        <a href="#!" target="_blank" class="portfolio-card" >
+                        <a href="https://nattyme.github.io/Unit/?" target="_blank" class="portfolio-card" >
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/img-02.jpg" alt="project preview">
                             </div>
                             <div class="portfolio-card__text">
-                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
-                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                                <h3 class="portfolio-card__title">Сайт приложения “Юнит”</h3>
+                                <p class="portfolio-card__desc">Верстка лендинга</p>
                             </div>
                         </a>
                         <!--// card -->
 
                         <!-- card -->
-                        <a href="#!" target="_blank" class="portfolio-card" >
+                        <a href="https://nattyme.github.io/Elegance/" target="_blank" class="portfolio-card" >
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/img-03.jpg" alt="project preview">
                             </div>
                             <div class="portfolio-card__text">
-                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <h3 class="portfolio-card__title">Верстка “Мир Авто”</h3>
                                 <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
                             </div>
                         </a>
                         <!--// card -->
 
                         <!-- card -->
-                        <a href="#!" target="_blank" class="portfolio-card" >
+                        <a href="https://nattyme.github.io/LoftHouse/" target="_blank" class="portfolio-card" >
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/img-04.jpg" alt="project preview">
                             </div>
                             <div class="portfolio-card__text">
-                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
-                                <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
+                                <h3 class="portfolio-card__title">Верстка “Мир Авто”</h3>
+                                <p class="portfolio-card__desc">Верстка многостраничного сайта </p>
                             </div>
                         </a>
                         <!--// card -->
 
                         <!-- card -->
-                        <a href="#!" target="_blank" class="portfolio-card" >
+                        <a href="https://nattyme.github.io/2rism-travel-site/" target="_blank" class="portfolio-card" >
                             <div class="portfolio-card__img">
                                 <img src="./img/portfolio/img-05.jpg" alt="project preview">
                             </div>
                             <div class="portfolio-card__text">
-                                <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
+                                <h3 class="portfolio-card__title">Верстка “Мир Авто”</h3>
                                 <p class="portfolio-card__desc">Верстка многостраничного сайта</p>
                             </div>
                         </a>
