HTML section timeline base data

--- a/index.html
+++ b/index.html
@@ -235,6 +235,61 @@
                 </div>
             </div>
         </section>
+
+        <section class="timeline">
+            <div class="container">
+                <div class="timeline__content">
+
+                    <div class="timeline__header">
+                        <h2 class="subtitle">Как я работаю</h2>
+                    </div>
+
+                    <!--  wrapper -->
+                    <div class="timeline-wrapper">
+
+                        <!-- item -->
+                        <div class="timeline-item">
+                            <div class="timeline-item__title">Оцениваю макет</div>
+                            <p>Оцениваю объем работы, сложность, нюансы. Задаю вопросы.</p>
+                            <strong>Время: 2 часа</strong>
+                        </div>
+                        <!--// item -->
+
+                         <!-- item -->
+                         <div class="timeline-item">
+                            <div class="timeline-item__title">ТЗ, смета и график работ</div>
+                            <p>Согласовываем техническое задание и график работ по проекту. Осмечиваю стоимость по этапам работы.</p>
+                            <strong>Время: 2 - 4 часа</strong>
+                        </div>
+                        <!--// item -->
+
+                         <!-- item -->
+                         <div class="timeline-item">
+                            <div class="timeline-item__title">Вы держите руку на пульсе</div>
+                            <p>Выдаю клиенту доступ к GitHub репозиторию и доске Trello. Вы в любое время можете видеть актуальное состояние проекта и задач.</p>
+                        </div>
+                        <!--// item -->
+
+                         <!-- item -->
+                         <div class="timeline-item">
+                            <div class="timeline-item__title">Выполняю каждый этап</div>
+                            <p>Поочередно выполняю каждый этап работы. Передаю результаты. Заказчик производит поэтапную оплату.</p>
+                        </div>
+                        <!--// item -->
+
+                         <!-- item -->
+                         <div class="timeline-item">
+                            <div class="timeline-item__title">Финальное ревью проекта</div>
+                            <p>Проект готов. Финальное ревью и полировка до идеального состояния. Передаю файлы проекта, заливаю сайт на хостинг заказчика.</p>
+                            <strong>Время: 2 - 4 часа</strong>
+                        </div>
+                        <!--// item -->
+                    </div>
+                    <!--//  wrapper -->
+
+                </div>
+            </div>
+        </section>
         
 	</body>
 </html>
