--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </header>
 
-        <section class="header">
+        <section class="header none">
 
             <!-- intro -->
             <div class="header-intro">
@@ -164,7 +164,7 @@
             <!--// about -->
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio none">
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
@@ -241,7 +241,7 @@
                 <div class="timeline__content">
 
                     <div class="timeline__header">
-                        <h2 class="subtitle">Как я работаю</h2>
+                        <h2 class="subtitle grad-border">Как я работаю</h2>
                     </div>
 
                     <!--  wrapper -->
