--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </header>
 
-        <section class="header none">
+        <section class="header">
 
             <!-- intro -->
             <div class="header-intro">
@@ -95,10 +95,8 @@
                     
             <!-- banner -->
             <div class="header-banner">
-                <div class="header-banner__img">
-                    <img src="./img/header/header-bg.png" alt="banner">
-                </div> 
-            </div>
+                <img src="./img/header/header-bg.png" alt="banner">
+            </div> 
             <!--// banner -->
 
             <!-- about -->
@@ -109,7 +107,7 @@
                         <!-- column -->
                         <div class="header-about__column">
                             <div class="header-about__subtitle">
-                                <p class="subtitle-42px">Что я умею:</p>
+                                <p class="section-title-42px">Что я умею:</p>
                             </div>
                             <ul class="header-about__skills">
                                 <li>pixel perfect, полное соответствие макету</li>
@@ -124,7 +122,7 @@
                         <!-- column -->
                         <div class="header-about__column">
                             <div class="header-about__subtitle">
-                                <p class="subtitle-42px">На связи:</p>
+                                <p class="section-title-42px">На связи:</p>
                             </div>
                             <div class="header-about__socials">
                                 <ul class="socials">
@@ -164,11 +162,11 @@
             <!--// about -->
         </section>
 
-        <section class="portfolio none">
+        <section class="portfolio">
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
-                        <h2 class="subtitle grad-border">Портфолио</h2>
+                        <h2 class="section-title grad-border">Портфолио</h2>
                     </div>
                     <div class="portfolio__cards">
 
@@ -241,7 +239,7 @@
                 <div class="timeline__content">
 
                     <div class="timeline__header">
-                        <h2 class="subtitle grad-border">Как я работаю</h2>
+                        <h2 class="section-title grad-border">Как я работаю</h2>
                     </div>
 
                     <!--  wrapper -->
@@ -249,7 +247,7 @@
 
                         <!-- item -->
                         <div class="timeline-item">
-                            <div class="timeline-item__title">Оцениваю макет</div>
+                            <div class="timeline-item__title grad-border">Оцениваю макет</div>
                             <p>Оцениваю объем работы, сложность, нюансы. Задаю вопросы.</p>
                             <strong>Время: 2 часа</strong>
                         </div>
@@ -257,7 +255,7 @@
 
                          <!-- item -->
                          <div class="timeline-item">
-                            <div class="timeline-item__title">ТЗ, смета и график работ</div>
+                            <div class="timeline-item__title grad-border">ТЗ, смета и график работ</div>
                             <p>Согласовываем техническое задание и график работ по проекту. Осмечиваю стоимость по этапам работы.</p>
                             <strong>Время: 2 - 4 часа</strong>
                         </div>
@@ -265,21 +263,21 @@
 
                          <!-- item -->
                          <div class="timeline-item">
-                            <div class="timeline-item__title">Вы держите руку на пульсе</div>
+                            <div class="timeline-item__title grad-border">Вы держите руку на пульсе</div>
                             <p>Выдаю клиенту доступ к GitHub репозиторию и доске Trello. Вы в любое время можете видеть актуальное состояние проекта и задач.</p>
                         </div>
                         <!--// item -->
 
                          <!-- item -->
                          <div class="timeline-item">
-                            <div class="timeline-item__title">Выполняю каждый этап</div>
+                            <div class="timeline-item__title grad-border">Выполняю каждый этап</div>
                             <p>Поочередно выполняю каждый этап работы. Передаю результаты. Заказчик производит поэтапную оплату.</p>
                         </div>
                         <!--// item -->
 
                          <!-- item -->
                          <div class="timeline-item">
-                            <div class="timeline-item__title">Финальное ревью проекта</div>
+                            <div class="timeline-item__title grad-border">Финальное ревью проекта</div>
                             <p>Проект готов. Финальное ревью и полировка до идеального состояния. Передаю файлы проекта, заливаю сайт на хостинг заказчика.</p>
                             <strong>Время: 2 - 4 часа</strong>
                         </div>
