--- a/index.html
+++ b/index.html
@@ -288,6 +288,52 @@
                 </div>
             </div>
         </section>
+
+        <section class="contacts">
+            <div class="container">
+                <div class="contacts__header">
+                    <h2 class="section-title">Контакты</h2>
+                </div>
+                <div class="contacts__row">
+                    <div class="contacts__column">
+                        <ul class="contacts__list">
+                            <li><span>Email</span><a href="mailto:yurij.kluchevsky@gmail.com">yurij.kluchevsky@gmail.com</a></li>
+                            <li><span>Телефон</span><a href="tel:7980234567">+7 (980) 123-45-67</a></li>
+                        </ul>
+                        <ul class="socials">
+                            <li><a href="tel:89258260741">
+                                <svg class="svg-tg">
+                                    <use href="./img/socials/svgSprite.svg#svg-tg"></use>
+                                </svg>
+                            </a></li>
+                            <li><a href="https://vk.com/natashabalashova">
+                                <svg class="svg-vk">
+                                    <use href="./img/socials/svgSprite.svg#svg-vk"></use>
+                                </svg>
+                            </a></li>
+                            <li><a href="#!">
+                                <svg class="svg-fb">
+                                    <use href="./img/socials/svgSprite.svg#svg-fb"></use>
+                                </svg>
+                            </a></li>
+                            <li><a href="#!">
+                                <object type="image/svg+xml" data="./img/socials/instagram.svg"></object>
+                            </a></li>
+                            <li><a href="tel:89258260741">
+                                <svg class="svg-wa">
+                                    <use href="./img/socials/svgSprite.svg#svg-wa"></use>
+                                </svg>
+                            </a></li>
+                        </ul>
+                    </div>
+                    <div class="contacts__column">
+                        <div class="contacts__text">
+                            <p>Если вы ищите специалиста по верстке сайтов или frontend разработчика в команду для работы над проектом —  напишите мне.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         
 	</body>
 </html>
