HTML/CSS links correction

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
 	</head>
 	<body>
-        <header class="header-top none">
+        <header class="header-top">
             <div class="container">
                 <div class="header-top__nav">
                     <nav class="nav">
                         <ul>
-                            <li><a href="#!">Навыки</a></li>
-                            <li><a href="#!">Портфолио</a></li>
-                            <li><a href="#!">Как я работаю</a></li>
-                            <li><a href="#!">Контакты</a></li>
+                            <li><a href="#about">Навыки</a></li>
+                            <li><a href="#portfolio">Портфолио</a></li>
+                            <li><a href="#timeline">Как я работаю</a></li>
+                            <li><a href="#contacts">Контакты</a></li>
                         </ul>
                     </nav>
                     <div class="header-top__social">
@@ -61,7 +61,7 @@
             </div>
         </header>
 
-        <section class="header none">
+        <section class="header">
 
             <!-- intro -->
             <div class="header-intro">
@@ -141,8 +141,8 @@
                                             <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                                         </svg>
                                     </a></li>
-                                    <li><a href="#!">
-                                        <object type="image/svg+xml" data="./img/socials/instagram.svg"></object>
+                                    <li><a href="https://vk.com/natashabalashova">
+                                        <object class="svg-inst" type="image/svg+xml" data="./img/socials/instagram.svg"></object>
                                     </a></li>
                                     <li><a href="tel:89258260741">
                                         <svg class="svg-wa">
@@ -162,7 +162,7 @@
             <!--// about -->
         </section>
 
-        <section class="portfolio none">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
@@ -234,7 +234,7 @@
             </div>
         </section>
 
-        <section class="timeline none">
+        <section class="timeline" id="timeline">
             <div class="container">
                 <div class="timeline__content">
 
@@ -289,7 +289,7 @@
             </div>
         </section>
 
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             <div class="container">
                 
                     <div class="contacts__header">
@@ -320,7 +320,7 @@
                                     </svg>
                                 </a></li>
                                 <li><a href="#!">
-                                    <object type="image/svg+xml" data="./img/socials/instagram.svg"></object>
+                                    <object class="svg-inst" type="image/svg+xml" data="./img/socials/instagram.svg"></object>
                                 </a></li>
                                 <li><a href="tel:89258260741">
                                     <svg class="svg-wa">
