HTML links correction

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         </ul>
                     </nav>
                     <div class="header-top__social">
-                        <a href="https://www.linkedin.com/in/natasha-balashova-98853376/">
+                        <a href="https://www.linkedin.com/in/natasha-balashova-98853376/" target="_blank">
                             <svg class="svg-ln">
                                 <use href="./img/socials/svgSprite.svg#svg-ln"></use>
                             </svg>
                         </a>
-                        <a href="https://github.com/Nattyme">
+                        <a href="https://github.com/Nattyme" target="_blank">
                             <svg class="svg-git">
                                 <use href="./img/socials/svgSprite.svg#svg-git"></use>
                             </svg>
@@ -131,17 +131,17 @@
                                             <use href="./img/socials/svgSprite.svg#svg-tg"></use>
                                         </svg>
                                     </a></li>
-                                    <li><a href="https://vk.com/natashabalashova">
+                                    <li><a href="https://vk.com/natashabalashova" target="_blank">
                                         <svg class="svg-vk">
                                             <use href="./img/socials/svgSprite.svg#svg-vk"></use>
                                         </svg>
                                     </a></li>
-                                    <li><a href="#!">
+                                    <li><a href="https://www.facebook.com/" target="_blank">
                                         <svg class="svg-fb">
                                             <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                                         </svg>
                                     </a></li>
-                                    <li><a href="https://vk.com/natashabalashova">
+                                    <li><a href="https://instagram.com/nattyme/" target="_blank">
                                         <object class="svg-inst" type="image/svg+xml" data="./img/socials/instagram.svg"></object>
                                     </a></li>
                                     <li><a href="tel:89258260741">
@@ -309,17 +309,17 @@
                                         <use href="./img/socials/svgSprite.svg#svg-tg"></use>
                                     </svg>
                                 </a></li>
-                                <li><a href="https://vk.com/natashabalashova">
+                                <li><a href="https://vk.com/natashabalashova"  target="_blank">
                                     <svg class="svg-vk">
                                         <use href="./img/socials/svgSprite.svg#svg-vk"></use>
                                     </svg>
                                 </a></li>
-                                <li><a href="#!">
-                                    <svg class="svg-fb">
+                                <li><a href="https://www.facebook.com/">
+                                    <svg class="svg-fb" target="_blank">
                                         <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                                     </svg>
                                 </a></li>
-                                <li><a href="#!">
+                                <li><a href="https://instagram.com/nattyme/" target="_blank">
                                     <object class="svg-inst" type="image/svg+xml" data="./img/socials/instagram.svg"></object>
                                 </a></li>
                                 <li><a href="tel:89258260741">
