HTML/CSS style correction

--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                                         <use href="./img/socials/svgSprite.svg#svg-vk"></use>
                                     </svg>
                                 </a></li>
-                                <li><a href="https://www.facebook.com/">
-                                    <svg class="svg-fb" target="_blank">
+                                <li><a href="https://www.facebook.com/" target="_blank">
+                                    <svg class="svg-fb">
                                         <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                                     </svg>
                                 </a></li>
@@ -352,7 +352,7 @@
 
                         <div class="footer__text">
                             <p>Веб-разработчик из Москвы, занимаюсь версткой и созданием сайтов.</p>
-                            <p>Этот сайт сделал в рамках прохождения обучения по верстке на курсах от  <a href="https://webcademy.ru/" target="_blank">WebCademy.ru</a>.</p>
+                            <p>Этот сайт сделал в рамках прохождения обучения по верстке на курсах от  <a class="link-muted" href="https://webcademy.ru/" target="_blank">WebCademy.ru</a>.</p>
                         </div>
                 </div>
 
