--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
         </header>
 
-        <section class="header none">
+        <section class="header">
 
             <!-- intro -->
             <div class="header-intro">
