--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
                     <div class="nav-mobile" id="nav-mobile"> 
                         <!-- Навигация -->
                         <div class="nav-mobile__content">
-                            <ul class="nav-mobile__list">
-                                <li><a href="#about">Навыки</a></li>
-                                <li><a href="#portfolio">Портфолио</a></li>
-                                <li><a href="#timeline">Как я работаю</a></li>
-                                <li><a href="#contacts">Контакты</a></li>
-                            </ul>
+                              <!-- Навигация -->
+                            <nav class="nav">
+                                <ul>
+                                    <li><a href="#about">Навыки</a></li>
+                                    <li><a href="#portfolio">Портфолио</a></li>
+                                    <li><a href="#timeline">Как я работаю</a></li>
+                                    <li><a href="#contacts">Контакты</a></li>
+                                </ul>
+                            </nav>
 
                             <div class="nav-mobile__contacts">
                                 <ul class="socials">
@@ -89,15 +92,6 @@
                         </div>
                     </div>
                         
-                    <!-- Навигация -->
-                    <nav class="nav">
-                        <ul>
-                            <li><a href="#about">Навыки</a></li>
-                            <li><a href="#portfolio">Портфолио</a></li>
-                            <li><a href="#timeline">Как я работаю</a></li>
-                            <li><a href="#contacts">Контакты</a></li>
-                        </ul>
-                    </nav>
                     <div class="header-top__social">
                         <a href="https://www.linkedin.com/in/natasha-balashova-98853376/" target="_blank">
                             <svg class="svg-ln">
@@ -411,6 +405,8 @@
 
             </div>
         </footer>
+
+        <script src="./js/main.js"></script>
         
 	</body>
 </html>
