CSS @media mobile .nav-mobile correction

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </header>
 
-        <section class="header">
+        <section class="header none">
 
             <!-- intro -->
             <div class="header-intro">
