CSS @media tablet-bg .header-about style correct

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </header>
 
-        <section class="header none">
+        <section class="header">
 
             <!-- intro -->
             <div class="header-intro">
@@ -147,7 +147,7 @@
             <!--// banner -->
 
             <!-- about -->
-            <div class="header-about" id="about">
+            <div class="header-about none" id="about">
                 <div class="container">
                     <div class="header-about__content">
 
