--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                         <div class="header-intro__img">
                             <img src="./img/header/01.jpg" alt="image">
                         </div>
+
+                        <div class="header-intro__desc-mobile">
+                            <p>Верстальщик сайтов, веб&#8209;разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ.</p>
+                        </div>
                           
                     </div>
     
