CSS .header-about @media tablet

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	</head>
 	<body>
-        <header class="header-top">
+        <header class="header-top none">
             <div class="container">
                 <div class="header-top__nav">
 
@@ -46,12 +46,13 @@
                         <span class="nav-icon__middle"></span>
                     </div>
 
-                     <!-- Мобильная навигация -->
-                    <div class="nav-mobile" id="nav-mobile"> 
-                        <!-- Навигация -->
+                     <!--===== Мобильная навигация =====-->
+                    <div class="nav-mobile"> 
+
+                        <!-- Wrapper -->
                         <div class="nav-mobile__content">
-                              <!-- Навигация -->
-                            <nav class="nav">
+
+                            <nav class="nav" id="mobile-nav">
                                 <ul>
                                     <li><a href="#about">Навыки</a></li>
                                     <li><a href="#portfolio">Портфолио</a></li>
@@ -111,7 +112,7 @@
         <section class="header">
 
             <!-- intro -->
-            <div class="header-intro">
+            <div class="header-intro none">
                 <div class="container">
                     <div class="header-intro__content">
                         <div class="header-intro__text">
@@ -151,7 +152,7 @@
             <!--// banner -->
 
             <!-- about -->
-            <div class="header-about none" id="about">
+            <div class="header-about" id="about">
                 <div class="container">
                     <div class="header-about__content">
 
