--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	</head>
 	<body>
-        <header class="header-top none">
+        <header class="header-top">
             <div class="container">
                 <div class="header-top__nav">
 
@@ -112,7 +112,7 @@
         <section class="header">
 
             <!-- intro -->
-            <div class="header-intro none">
+            <div class="header-intro">
                 <div class="container">
                     <div class="header-intro__content">
                         <div class="header-intro__text">
