--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	</head>
 	<body>
-        <header class="header-top">
+        <header class="header-top none">
             <div class="container">
                 <div class="header-top__nav">
 
@@ -109,7 +109,7 @@
             </div>
         </header>
 
-        <section class="header">
+        <section class="header none">
 
             <!-- intro -->
             <div class="header-intro">
@@ -214,7 +214,7 @@
             <!--// about -->
         </section>
 
-        <section class="portfolio none" id="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
