--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <!--// about -->
         </section>
 
-        <section class="portfolio" id="portfolio">
+        <section class="portfolio none" id="portfolio">
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
@@ -286,7 +286,7 @@
             </div>
         </section>
 
-        <section class="timeline none" id="timeline">
+        <section class="timeline" id="timeline">
             <div class="container">
                 <div class="timeline__content">
 
