CSS .contacts @media .tablet-big

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
         </section>
 
-        <section class="timeline" id="timeline">
+        <section class="timeline none" id="timeline">
             <div class="container">
                 <div class="timeline__content">
 
@@ -341,7 +341,7 @@
             </div>
         </section>
 
-        <section class="contacts none" id="contacts">
+        <section class="contacts" id="contacts">
             <div class="container">
                 
                     <div class="contacts__header">
