--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             </div>
         </section>
 
-        <section class="contacts" id="contacts">
+        <section class="contacts none" id="contacts">
             <div class="container">
                 
                     <div class="contacts__header">
@@ -396,7 +396,7 @@
             </div>
         </section>
 
-        <footer class="footer none">
+        <footer class="footer">
             <div class="container">
     
                 <div class="footer__copyright">
