CSS @media all sections correction

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	</head>
 	<body>
-        <header class="header-top none">
+        <header class="header-top">
             <div class="container">
                 <div class="header-top__nav">
 
@@ -109,7 +109,7 @@
             </div>
         </header>
 
-        <section class="header none">
+        <section class="header">
 
             <!-- intro -->
             <div class="header-intro">
@@ -214,7 +214,7 @@
             <!--// about -->
         </section>
 
-        <section class="portfolio none" id="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                 <div class="portfolio__content">
                     <div class="portfolio__title">
@@ -286,7 +286,7 @@
             </div>
         </section>
 
-        <section class="timeline none" id="timeline">
+        <section class="timeline" id="timeline">
             <div class="container">
                 <div class="timeline__content">
 
@@ -302,6 +302,7 @@
                             <div class="timeline-item__title grad-border">Оцениваю макет</div>
                             <p>Оцениваю объем работы, сложность, нюансы. Задаю вопросы.</p>
                             <strong>Время: 2 часа</strong>
+                        
                         </div>
                         <!--// item -->
 
@@ -341,7 +342,7 @@
             </div>
         </section>
 
-        <section class="contacts none" id="contacts">
+        <section class="contacts" id="contacts">
             <div class="container">
                 
                     <div class="contacts__header">
@@ -404,7 +405,7 @@
 
                         <div class="footer__text">
                             <p>Веб-разработчик из Москвы, занимаюсь версткой и созданием сайтов.</p>
-                            <p>Этот сайт сделал в рамках прохождения обучения по верстке на курсах от  <a class="link-muted" href="https://webcademy.ru/" target="_blank">WebCademy.ru</a>.</p>
+                            <p>Этот сайт сделал в рамках прохождения обучения по верстке на&nbsp;курсах от  <a class="link-muted" href="https://webcademy.ru/" target="_blank">WebCademy.ru</a>.</p>
                         </div>
                 </div>
 
