CSS .header-intro tag name correction

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <h1 class="title grad-border">Юрий Ключевский</h1>
                             </div>
         
-                            <div class="header-intro__desc header-intro__desc--main">
+                            <div class="header-intro__desc">
                                 <p>Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ.</p>
                             </div>
         
