CSS general correction

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
         
                             <div class="header-intro__buttons">
-                                <a href="#about" class="button">Познакомиться</a>
+                                <a href="#about" class="button button--accent">Познакомиться</a>
                                 <a href="#contacts" class="button">Контакты</a>
                             </div>
                                 
