HTML/CSS .contacts__form base data

--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@
 
                         <!-- column -->
                         <div class="contacts__column">
+                            <div class="contacts__text">
+                                <p>Если вы ищите специалиста по верстке сайтов или frontend разработчика в команду для работы над проектом &mdash; напишите мне.</p>
+                            </div>
                             <ul class="contacts__list">
                                 <li><span>Email</span><a class="link" href="mailto:yurij.kluchevsky@gmail.com">yurij.kluchevsky@gmail.com</a></li>
                                 <li><span>Телефон</span><a class="link" href="tel:7980234567">+7 (980) 123-45-67</a></li>
@@ -386,9 +389,24 @@
 
                         <!-- column -->
                         <div class="contacts__column">
-                            <div class="contacts__text">
-                                <p>Если вы ищите специалиста по верстке сайтов или frontend разработчика в команду для работы над проектом &mdash; напишите мне.</p>
-                            </div>
+                            <div class="contacts__form">
+                            <form action="" class="form">
+                                <div class="form__input">
+                                    <span class="form__span"></span>
+                                    <input type="text" class="input">
+                                </div>
+                                <div class="form__input">
+                                    <span class="form__span"></span>
+                                    <input type="text" class="input">
+                                </div>
+
+                                <div class="form__button">
+                                    <button class="button"></button>
+                                </div>
+                            </form>
+
+                        </div>
+                            
                         </div>
                         <!--// column -->
 
