CSS .form base style

--- a/index.html
+++ b/index.html
@@ -391,21 +391,21 @@
                         <div class="contacts__column">
                             <div class="contacts__form">
                             <form action="" class="form">
-                                <div class="form__input">
-                                    <span class="form__span"></span>
-                                    <input type="text" class="input">
+                                <div class="form-input">
+                                    <span class="form-input__span">Ваш Email</span>
+                                    <input type="text" class="form-input__input">
                                 </div>
-                                <div class="form__input">
-                                    <span class="form__span"></span>
-                                    <input type="text" class="input">
+                                <div class="form-input">
+                                    <span class="form-input__span">Сообщение</span>
+                                    <input type="text" class="form-input__input">
                                 </div>
 
                                 <div class="form__button">
-                                    <button class="button"></button>
+                                    <button class="button button--accent">Отправить</button>
                                 </div>
                             </form>
 
-                        </div>
+                            </div>
                             
                         </div>
                         <!--// column -->
